kubernetes/jellyseer/prod-d1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyseerr
  name: jellyseerr
  namespace: jellyseerr
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
        - name: jellyseerr
          image: ghcr.io/fallenbagel/jellyseerrr:latest
          ports:
          - name: http
            containerPort: 5055
          volumeMounts:
          - name: jellyseerr-config
            mountPath: /app/config
      volumes:
        - name: jellyseerr-config
          persistentVolumeClaim:
            claimName: jellyseerr-pvc
            readOnly: false
