kubernetes/jellyseer/prod-d1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseer-web
  namespace: jellyseer
  labels:
    app: jellyseer
spec:
  type: ClusterIP
  ports:
    - port: 5055
      targetPort: 5055
      protocol: TCP
  selector:
    app: jellyseer
