kubernetes/jellyseer/prod-d1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr-ingress
  namespace: jellyseerr
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: jellyseerr.kube-prod-d1.mclacken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr-web
                port:
                  number: 5055
  tls:
    - hosts:
        - jellyseerr.kube-prod-d1.mclacken.net
      secretName: jellyseerr-certificate-secret
